--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link rel="icon" href="https://q2.qlogo.cn/headimg_dl?dst_uin=2726730791&spec=0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AcoFork 的 EdgeOne 监控大屏</title>
+    <title>EdgeOne 监控大屏</title>
     <!-- Tailwind CSS for Shadcn/UI style -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@4.9.0/map/js/world.js"></script>
+    <script src="https://cdn.jsdmirror.com/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+    <script src="https://cdn.jsdmirror.com/npm/echarts@4.9.0/map/js/world.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
         body { font-family: 'Inter', sans-serif; }
@@ -116,7 +116,7 @@
         <!-- Header -->
         <div class="flex items-center justify-between">
             <div>
-                <h1 id="page-header" class="text-3xl font-bold tracking-tight text-slate-900">AcoFork 的 EdgeOne 监控大屏</h1>
+                <h1 id="page-header" class="text-3xl font-bold tracking-tight text-slate-900">EdgeOne 监控大屏</h1>
                 <p class="text-muted-foreground mt-1">EdgeOne 站点流量与请求量分析</p>
             </div>
         </div>
@@ -808,17 +808,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <!-- Footer -->
-        <div class="flex flex-col justify-center items-center pt-8 pb-4 text-sm text-muted-foreground space-y-2">
-            <div>
-                Powered By <a href="https://2x.nz" target="_blank" class="ml-1 font-medium underline underline-offset-4 hover:text-primary">AcoFork</a>
-            </div>
-            <a href="https://github.com/afoim/eo_monitior" target="_blank" class="flex items-center hover:text-primary transition-colors">
-                <svg class="h-4 w-4 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path></svg>
-                GitHub Project
-            </a>
         </div>
 
     </div>
