--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EdgeOne 监控大屏</title>
     <!-- Tailwind CSS for Shadcn/UI style -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://tailwind.cydiaa.com"></script>
     <script src="https://cdn.jsdmirror.com/npm/echarts@5.4.3/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdmirror.com/npm/echarts@4.9.0/map/js/world.js"></script>
     <style>
