--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>EdgeOne 监控大屏</title>
     <!-- Tailwind CSS for Shadcn/UI style -->
     <script src="https://tailwind.cydiaa.com"></script>
-    <script src="https://cdn.jsdmirror.com/npm/echarts@5.4.3/dist/echarts.min.js"></script>
-    <script src="https://cdn.jsdmirror.com/npm/echarts@4.9.0/map/js/world.js"></script>
+    <script src="https://img.wxhbts.eu.org/api/proxy?url=https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+    <script src="https://img.wxhbts.eu.org/api/proxy?url=https://cdn.jsdelivr.net/npm/echarts@4.9.0/map/js/world.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
         body { font-family: 'Inter', sans-serif; }
