--- a/esa.html
+++ b/esa.html
@@ -522,7 +522,7 @@
             'Anhui': '安徽', 'Shandong': '山东', 'Shanghai': '上海', 'Zhejiang': '浙江', 'Henan': '河南',
             'Hubei': '湖北', 'Jiangxi': '江西', 'Hunan': '湖南', 'Guizhou': '贵州', 'Yunnan': '云南',
             'Chongqing': '重庆', 'Sichuan': '四川', 'Xizang': '西藏', 'Guangdong': '广东', 'Guangxi': '广西',
-            'Hainan': '海南', '0': '其他', '1': '港澳台', '-': '中国内地'
+            'Hainan': '海南', '0': '其他', '1': '港澳台', '-': '境外'
         };
 
         const countryMap = {
